--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-  "start": "node server.js"
+ "scripts": {
+  "start": "node server.js",
+  "test": "echo \"No tests yet\" && exit 0"
 },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bharath24-10/ci-cd-pipeline.git"
